docs and new methods
