# src/application/docs/swagger.json
@@ -343,6 +343,244 @@
             }
           }
         }
+      },
+      "get": {
+        "summary": "Lista os filmes",
+        "description": "Lista todos os filmes cadastrados no sistema.",
+        "tags": ["Movie"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token Bearer",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "totalItems": {
+                  "type": "integer"
+                },
+                "currentPage": {
+                  "type": "integer"
+                },
+                "limit": {
+                  "type": "integer"
+                },
+                "totalPages": {
+                  "type": "integer"
+                },
+                "items": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "title": {
+                        "type": "string"
+                      },
+                      "category": {
+                        "type": "string"
+                      },
+                      "image": {
+                        "type": "string"
+                      },
+                      "year": {
+                        "type": "integer"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Invalid field offset. It must be no greater than 250."
+                },
+                {
+                  "message": "Invalid fiield offset. It must be no less than 1."
+                },
+                {
+                  "message": "Invalid field offset. It must be a number."
+                },
+                {
+                  "message": "Invalid field limit. It must be no greater than 250."
+                },
+                {
+                  "message": "Invalid field limit. It must be no less than 1."
+                },
+                {
+                  "message": "Invalid field limit. It must be a number."
+                }
+              ]
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Token missing."
+                },
+                {
+                  "message": "Invalid token."
+                }
+              ]
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal Server Error."
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/movie/{movieId}": {
+      "get": {
+        "summary": "Busca um filme com base no seu id",
+        "description": "Busca um filme com base no id e o retorna junto com suas críticas se for encontrado.",
+        "tags": ["Movie"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token Bearer",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "path",
+            "name": "movieId",
+            "description": "Id do filme",
+            "required": true,
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "movieId": {
+                  "type": "integer"
+                },
+                "title": {
+                  "type": "string"
+                },
+                "category": {
+                  "type": "string"
+                },
+                "image": {
+                  "type": "string"
+                },
+                "year": {
+                  "type": "integer"
+                },
+                "reviews": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "description": {
+                        "type": "string"
+                      },
+                      "isLiked": {
+                        "type": "boolean"
+                      },
+                      "rating": {
+                        "type": "number"
+                      }
+                    }
+                  }
+                },
+                "rating": {
+                  "type": "number"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Token missing."
+                },
+                {
+                  "message": "Invalid token."
+                }
+              ]
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal Server Error."
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/review": {
@@ -561,7 +799,7 @@
             }
           },
           "400": {
-            "description": "Unauthorized",
+            "description": "Bad Request",
             "schema": {
               "type": "array",
               "items": {
